Add header content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
+    <header class="container-fluid">
+      <nav>
+        <ul>
+          <li><a href="#">Logo</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+        </ul>
+      </nav>
+      <section class="introduction">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <button type="button" name="button">Call to Action</button>
+      </section>
+      <div class="row">
+        <div class="col-md-3">
+          Primary Section
+        </div>
+        <div class="col-md-3">
+          O'level Section
+        </div>
+        <div class="col-md-3">
+          A'level Section
+        </div>
+        <div class="col-md-3">
+          University Section
+        </div>
+      </div>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
