--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Inline School</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
     <header class="container-fluid">
@@ -27,7 +27,7 @@
       <section class="introduction">
         <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <button type="button" name="button">Call to Action</button>
+        <button class="btn" type="button" name="button">Call to Action</button>
       </section>
       <div class="row">
         <div class="col-md-3">
